--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test": "echo \"No tests yet\"",
     "check": "npx tsc --noEmit"
   },
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.10",
