--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,23 @@ VITE_WHATSAPP_WEBHOOK_DOMAIN=your-domain.com
 # App Configuration
 VITE_APP_NAME=Stella Water Delivery
 VITE_APP_VERSION=2.0.0
+
+# Backend Database Configuration (for server.js)
+# Local Development Database
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=stella_whatsapp
+DB_USER=postgres
+DB_PASSWORD=password
+
+# Production Database (Railway will set this automatically)
+# DATABASE_URL=postgresql://user:password@host:port/database
+
+# WhatsApp Business API Configuration
+WHATSAPP_ACCESS_TOKEN=your_access_token_here
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
+WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id_here
+WHATSAPP_VERIFY_TOKEN=stella_webhook_verify_token
+
+# Environment
+NODE_ENV=development
