--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sharp": "^0.34.3",
     "zod": "^4.0.5"
   },
   "devDependencies": {
