--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-# Stella Water Delivery - Environment Configuration
+# Stella E-commerce Platform - Environment Configuration
 
 # Frontend Environment Variables
 VITE_API_URL=http://localhost:3000
 VITE_ENVIRONMENT=development
 VITE_WHATSAPP_WEBHOOK_DOMAIN=9b82ac6c2aa6.ngrok-free.app
-VITE_APP_NAME=Stella Water Delivery
+VITE_APP_NAME=Stella E-commerce Platform
 VITE_APP_VERSION=2.0.0
 
 # Backend Database Configuration
