Fix Railway production build - explicitly set VITE_API_URL and update Vite config for production

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 # Stella E-commerce Platform - Production Environment Configuration
 
-# Frontend Environment Variables - EMPTY means use relative paths
-VITE_API_URL=
+# Frontend Environment Variables - Use Railway production URL
+VITE_API_URL=https://stella-production-25e7.up.railway.app
 VITE_ENVIRONMENT=production
 VITE_APP_NAME=Stella E-commerce Platform
 VITE_APP_VERSION=2.0.0
