Transform Stella from water delivery to generic business platform
- Updated browser tab title from 'Water Delivery' to 'Business Management Platform'
- Changed logo from water drop (💧) to sparkle star (✨) throughout UI
- Simplified main app view to show just 'Stella' in blue text
- Removed all water delivery references from components and copy
- Updated product categories from water-specific to generic business items
- Changed database name from stella_whatsapp to stella_business
- Updated app name and branding to generic business terminology
- Maintained all functionality while making platform industry-agnostic

--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@
 VITE_API_URL=http://localhost:3000
 VITE_ENVIRONMENT=development
 VITE_WHATSAPP_WEBHOOK_DOMAIN=9b82ac6c2aa6.ngrok-free.app
-VITE_APP_NAME=Stella E-commerce Platform
+VITE_APP_NAME=Stella Business Platform
 VITE_APP_VERSION=2.0.0
 
 # Backend Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=stella_whatsapp
+DB_NAME=stella_business
 DB_USER=postgres
 DB_PASSWORD=password
 
