--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "emoji-datasource": "^15.1.2",
     "express": "^5.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "jsonwebtoken": "^9.0.2",
