--- a/.env
+++ b/.env
@@ -32,3 +32,11 @@ VITE_FACEBOOK_API_VERSION=v18.0
 
 # Privacy Configuration
 VITE_PRIVACY_MODE=true
+
+# Shopify Integration Configuration (Use .env.local for actual credentials)
+# VITE_SHOPIFY_API_KEY=your_shopify_api_key_here
+# VITE_SHOPIFY_API_SECRET=your_shopify_api_secret_here
+# VITE_SHOPIFY_ADMIN_ACCESS_TOKEN=your_shopify_access_token_here
+# VITE_SHOPIFY_STOREFRONT_ACCESS_TOKEN=your_storefront_token_here
+# VITE_SHOPIFY_STORE_URL=your-store-name.myshopify.com
+# VITE_SHOPIFY_ADMIN_URL=https://admin.shopify.com/store/your-store-name
