🎉 Complete Shopify-WhatsApp Integration with TTD Currency Support
✅ Features Added:
- Official Shopify-WhatsApp Sales Channel integration
- Product catalog sync with Facebook Business Manager
- TTD (Trinidad and Tobago Dollar) currency support
- Updated store name to 'SUSA SHAPEWEAR'
- Working product message functionality

✅ Technical Implementation:
- services/shopifyWhatsappSyncService.js: Complete integration service
- api/shopify-whatsapp/: API endpoints for integration management
- src/components/ShopifyWhatsAppIntegration.tsx: React UI component
- Fixed currency parameter handling for Facebook Catalog API
- Individual product sync approach (more reliable than batch)

✅ Configuration Updates:
- Updated .env with proper store name (SUSA SHAPEWEAR)
- Live Shopify credentials configured
- WhatsApp Business API catalog ID: 923378196624516
- Product messages working with existing retailer IDs

✅ Status:
- Integration fully functional
- Product sync working (2 products synced successfully)
- End-to-end product card messages sending successfully
- No more text reversion issues

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,52 @@
-# Frontend Environment Variables
+# Stella E-commerce Platform - Environment Configuration Template
+# Copy this file to .env and fill in your actual values
 
-# API Configuration
+# Frontend Environment Variables
 VITE_API_URL=http://localhost:3000
 VITE_ENVIRONMENT=development
-
-# WhatsApp Configuration (for display purposes only)
-VITE_WHATSAPP_WEBHOOK_DOMAIN=your-domain.com
-
-# App Configuration
-VITE_APP_NAME=Stella Water Delivery
+VITE_WHATSAPP_WEBHOOK_DOMAIN=your-ngrok-domain.ngrok-free.app
+VITE_APP_NAME=Stella Business Platform
 VITE_APP_VERSION=2.0.0
 
-# Backend Database Configuration (for server.js)
-# Local Development Database
+# Backend Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=stella_whatsapp
+DB_NAME=stella_business
 DB_USER=postgres
-DB_PASSWORD=password
-
-# Production Database (Railway will set this automatically)
-# DATABASE_URL=postgresql://user:password@host:port/database
+DB_PASSWORD=your_database_password
 
 # WhatsApp Business API Configuration
-WHATSAPP_ACCESS_TOKEN=your_access_token_here
-WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id_here
-WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id_here
-WHATSAPP_VERIFY_TOKEN=stella_webhook_verify_token
+WHATSAPP_ACCESS_TOKEN=your_whatsapp_access_token
+WHATSAPP_PHONE_NUMBER_ID=your_phone_number_id
+WHATSAPP_BUSINESS_ACCOUNT_ID=your_business_account_id
+WHATSAPP_VERIFY_TOKEN=your_webhook_verify_token
 
 # Environment
 NODE_ENV=development
+
+# Facebook/Meta API Configuration
+VITE_FACEBOOK_APP_ID=your_facebook_app_id_here
+VITE_FACEBOOK_APP_SECRET=your_facebook_app_secret_here
+VITE_FACEBOOK_REDIRECT_URI=http://localhost:5173/auth/facebook/callback
+VITE_FACEBOOK_API_VERSION=v18.0
+
+# Privacy Configuration
+VITE_PRIVACY_MODE=true
+
+# Shopify Integration Configuration
+VITE_SHOPIFY_API_KEY=your_shopify_api_key
+VITE_SHOPIFY_API_SECRET=your_shopify_api_secret
+VITE_SHOPIFY_ADMIN_ACCESS_TOKEN=your_shopify_admin_access_token
+VITE_SHOPIFY_STOREFRONT_ACCESS_TOKEN=your_shopify_storefront_access_token
+VITE_SHOPIFY_STORE_URL=your-store.myshopify.com
+VITE_SHOPIFY_STORE_NAME=Your Store Name
+VITE_SHOPIFY_ADMIN_URL=https://admin.shopify.com/store/your-store
+
+# Backend Shopify Configuration (for server-side API calls)
+SHOPIFY_API_KEY=your_shopify_api_key
+SHOPIFY_API_SECRET=your_shopify_api_secret
+SHOPIFY_ADMIN_ACCESS_TOKEN=your_shopify_admin_access_token
+SHOPIFY_STOREFRONT_ACCESS_TOKEN=your_shopify_storefront_access_token
+SHOPIFY_STORE_URL=your-store.myshopify.com
+SHOPIFY_STORE_NAME=Your Store Name
+SHOPIFY_ADMIN_URL=https://admin.shopify.com/store/your-store
